# broken.virus

./: CMakeLists.txt  installer_script.iss
.github/workflows/: release.yml
BROKEN/: broken.rc  broken2.cpp  broken3.cpp  broken4.cpp
BROKEN1/: broken.cpp  broken1.cpp
